--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -1,6 +1,6 @@
 <footer>
   <nav>
-    <a href="/feed.xml" aria-label="RSS feed" class="nav__link">RSS</a>
+    <!-- <a href="/feed.xml" aria-label="RSS feed" class="nav__link">RSS</a> -->
     <a href="//github.com/vinaynb" aria-label="Vinay in GitHub" class="nav__link">GitHub</a>
     <a href="//twitter.com/dilemmist" aria-label="Vinay in Twitter" class="nav__link">Twitter</a>
     <a href="/" aria-label="Go to home" class="nav__link nav__link--home">vinaybhinde.in</a>
