--- a/src/less/_general.less
+++ b/src/less/_general.less
@@ -21,7 +21,7 @@
 }
 
 :root.dark {
-	--accent: #7575ff;
+	--accent: #e51843;
 	--secondary: #d0d0e0;
 	--background: @dark--color;
 	--text: @light--color;
