Change: update name,twitter handle in common liquid templates

--- a/_includes/structured-data/home.liquid
+++ b/_includes/structured-data/home.liquid
@@ -2,8 +2,8 @@
 {
   "@context": "http://schema.org",
   "@type": "Person",
-  "name": "Jeremias Menichelli",
-  "url": "https://jeremenichelli.io",
+  "name": "Vinay Bhinde",
+  "url": "https://vinaybhinde.in",
   "jobTitle": "Web engineer",
   "image": "https://github.com/jeremenichelli.png",
   "sameAs": [
