--- a/_includes/structured-data/page.liquid
+++ b/_includes/structured-data/page.liquid
@@ -6,8 +6,8 @@
     "@type": "ListItem",
     "position": 1,
     "item": {
-      "@id": "https://jeremenichelli.io",
-      "name": "Jeremias Menichelli"
+      "@id": "https://vinaybhinde.in",
+      "name": "Vinay Bhinde"
     }
   },{
     "@type": "ListItem",
