--- a/_includes/structured-data/post.liquid
+++ b/_includes/structured-data/post.liquid
@@ -6,14 +6,14 @@
     "@type": "ListItem",
     "position": 1,
     "item": {
-      "@id": "https://jeremenichelli.io",
-      "name": "Jeremias Menichelli"
+      "@id": "https://vinaybhinde.in",
+      "name": "Vinay Bhinde"
     }
   },{
     "@type": "ListItem",
     "position": 2,
     "item": {
-      "@id": "https://jeremenichelli.io/blog",
+      "@id": "https://vinaybhinde.in/blog",
       "name": "Blog"
     }
   },{
