--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -17,7 +17,7 @@
   <meta name="description" content="{{ pageDescription }}">
   <link rel="canonical" href="{{ url }}">
   {% if type == 'post' %}
-  <meta name="author" content="Jeremias Menichelli">
+  <meta name="author" content="Vinay Bhinde">
   {% endif %}
 
   <!-- favicon definitions -->
@@ -49,8 +49,8 @@
 
   <!-- twitter card meta -->
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@jeremenichelli">
-  <meta name="twitter:creator" content="@jeremenichelli" />
+  <meta name="twitter:site" content="@vinayn_b">
+  <meta name="twitter:creator" content="@vinayn_b" />
   <meta name="twitter:title" content="{{ pageTitle }}">
   <meta name="twitter:description" content="{{ pageDescription }}">
   <meta name="twitter:url" content="{{ url }}">
