--- a/_includes/nav.liquid
+++ b/_includes/nav.liquid
@@ -2,6 +2,6 @@
 <nav>
   <a href="/" aria-label="Go to home" class="nav__link nav__link--home">Vinay Bhinde</a>
   <a href="/blog" aria-label="Read articles" class="nav__link">Blog</a>
-  <!-- <a href="/talks" aria-label="Check out talks" class="nav__link">Talks</a> -->
+  <a href="/talks" aria-label="Check out talks" class="nav__link">Talks</a>
   <a href="/about" aria-label="Know more about me" class="nav__link">About</a>
 </nav>
