Test: testing out default CSP policy

--- a/_includes/layouts/home.liquid
+++ b/_includes/layouts/home.liquid
@@ -8,5 +8,8 @@
         {{ content }}
       </div>
     </main>
+    <script>
+      alert(eval("foo.bar.baz"));
+    </script>
   </body>
 </html>
