Chore: update JavaScript Object Notation for Linked Data

--- a/_includes/structured-data/home.liquid
+++ b/_includes/structured-data/home.liquid
@@ -4,12 +4,12 @@
   "@type": "Person",
   "name": "Vinay Bhinde",
   "url": "https://vinaybhinde.in",
-  "jobTitle": "Web engineer",
-  "image": "https://github.com/jeremenichelli.png",
+  "jobTitle": "Senior Software Engineer",
+  "image": "https://github.com/vinaynb.png",
   "sameAs": [
-    "https://github.com/jeremenichelli",
-    "https://twitter.com/jeremenichelli",
-    "https://www.linkedin.com/in/jeremiasmenichelli/"
+    "https://github.com/vinaynb",
+    "https://twitter.com/vinayn_b",
+    "https://www.linkedin.com/in/vinaynb/"
   ]
 }
 </script>
