style: align text and container to the left for better layout consistency

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -34,14 +34,14 @@ html {
 }
 
 main {
-	text-align: right;
+	text-align: left;
 	width: 100%;
 }
 
 .main__container {
 	display: flex;
 	flex-direction: column;
-	align-items: flex-end;
+	align-items: flex-start;
 }
 
 .home__nav--line {
